2010-02-21 Borut Razem <borut.razem AT siol.net>

	* support/makebin/makebin.c:
	  check if fopen() succeeded
	* support/regression/ports/gbz80/spec.mk:
	  sdlsgb now creates .ihx file and makebin converts it to .gb;
	  removed -m (Load map file) rrgb command line option, since sdlsgb
	  doesn't generate a rrgb compatible map file. A converter from asxxxx
	  to rrgb map file format should be written...
	* src/SDCCmain.c: search C runtime initialization object files
	  crt0.rel in system library directories, then in user defined
	  library directories - third try

2010-02-21 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/mcs51/rt rack.c: fixed two warnings reported in #2955971
	  by Hubert Sack. (2nd warning found a bug)

2010-02-20 Philipp Klaus Krause <pkk AT spth.de>
	* device/lib/gbz80/mul.s,
	  device/lib/gbz80/Makefile.in:
	  Fixed multiplication in gbz80 port.

2010-02-20 Philipp Klaus Krause <pkk AT spth.de>
	* device/lib/gbz80/div.s:
	  Fixed mixed-sign division and modulo in gbz80 port.

2010-02-20 Borut Razem <borut.razem AT siol.net>

	* support/makebin/makebin.c: addad support for GameBoj binary file format,
	  added optional input and output file names arguments,
	  making it (hopefully) more robust, ...
	* all.dsp, sdcc.dsw, support/makebin/makebin.dsp:
	  addad makebin to the MSVC project
	* src/SDCCmain.c: fixed bug #2955614 - Regression - Warning: Couldn't find

2010-02-19 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/mcs51/rt rack.h,
	  src/mcs51/rtrack.c,
	  src/mcs51/ralloc.h,
	  src/mcs51/gen.c: Implemented tracking of symbols and dptr.
	  Set environment variable SDCC_REGTRACK if you want to enable
	  register tracking. If you want diagnostic output use option
	  --fverbose-asm and additionally set SDCC_REGTRACK_VERBOSE

2010-02-18 Borut Razem <borut.razem AT siol.net>

	* src/SDCCmain.c: search C runtime initialization object files
	  crt0.rel in system library directories, then in user defined
	  library directories
